Update the toast to hide under the top bar

--- a/IPSX/Flows/Profile/Storyboard/Profile.storyboard
+++ b/IPSX/Flows/Profile/Storyboard/Profile.storyboard
@@ -296,6 +296,7 @@
                         <outlet property="selectedCountryLabel" destination="qWj-Pj-swk" id="c6r-sI-8AX"/>
                         <outlet property="separatorView" destination="3Az-2p-pmY" id="kur-h6-Mj3"/>
                         <outlet property="telegramTextField" destination="lPR-YP-J9z" id="6Py-ws-xdK"/>
+                        <outlet property="topBarView" destination="San-8X-eiY" id="8Ef-nF-yKm"/>
                         <outlet property="topConstraintOutlet" destination="vb4-He-Pd3" id="2B6-Up-uYm"/>
                         <segue destination="2Zn-LV-orH" kind="show" identifier="SearchSegueID" id="Ztv-In-Qmr"/>
                     </connections>
