Implement logout request

--- a/IPSX/Flows/Register/Storyboard/WalletAdd.storyboard
+++ b/IPSX/Flows/Register/Storyboard/WalletAdd.storyboard
@@ -188,6 +188,9 @@
                                 <state key="disabled">
                                     <color key="titleColor" red="0.80784313730000001" green="0.83137254900000002" blue="0.85500001910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="loginAnotherAccountAction:" destination="yUi-lt-NI4" eventType="touchUpInside" id="h76-sF-CFw"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
